force-app/main/default/objects/Parsed_Application__c/Parsed_Application__c.object-meta.xml
<CustomObject>
    <label>Parsed Application</label>
    <nameField>
        <label>Parsed Application Name</label>
        <type>AutoNumber</type>
        <displayFormat>PA-{0000}</displayFormat>
    </nameField>
    <pluralLabel>Parsed Applications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>