force-app/main/default/objects/Parsed_Application__c/fields/Agent_Email__c.field-meta.xml
<CustomField>
    <fullName>Agent_Email__c</fullName>
    <label>Agent Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>