force-app/main/default/objects/Parsed_Application__c/fields/Agent_Phone__c.field-meta.xml
<CustomField>
    <fullName>Agent_Phone__c</fullName>
    <label>Agent Phone</label>
    <length>40</length>
    <type>Text</type>
</CustomField>