force-app/main/default/objects/Parsed_Application__c/fields/Airparser_Doc_Id__c.field-meta.xml
<CustomField>
    <fullName>Airparser_Doc_Id__c</fullName>
    <externalId>true</externalId>
    <label>Airparser Doc Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>