force-app/main/default/objects/Parsed_Application__c/fields/Airparser_Inbox_Id__c.field-meta.xml
<CustomField>
    <fullName>Airparser_Inbox_Id__c</fullName>
    <label>Airparser Inbox Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>