force-app/main/default/objects/Parsed_Application__c/fields/Application__c.field-meta.xml
<CustomField>
    <fullName>Application__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Application</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Parsed Applications</relationshipLabel>
    <relationshipName>Parsed_Applications</relationshipName>
    <type>Lookup</type>
</CustomField>