force-app/main/default/objects/Parsed_Application__c/fields/Client_Expectation__c.field-meta.xml
<CustomField>
    <fullName>Client_Expectation__c</fullName>
    <label>Client Expectation</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>