force-app/main/default/objects/Parsed_Application__c/fields/Housebuilder_Name__c.field-meta.xml
<CustomField>
    <fullName>Housebuilder_Name__c</fullName>
    <label>Housebuilder Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>