force-app/main/default/objects/Parsed_Application__c/fields/Number_Of_Bedrooms__c.field-meta.xml
<CustomField>
    <fullName>Number_Of_Bedrooms__c</fullName>
    <label>Number Of Bedrooms</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>