force-app/main/default/objects/Parsed_Application__c/fields/Parsed_Date__c.field-meta.xml
<CustomField>
    <fullName>Parsed_Date__c</fullName>
    <label>Parsed Date</label>
    <type>DateTime</type>
</CustomField>