force-app/main/default/objects/Parsed_Application__c/fields/Plot__c.field-meta.xml
<CustomField>
    <fullName>Plot__c</fullName>
    <label>Plot</label>
    <length>100</length>
    <type>Text</type>
</CustomField>