force-app/main/default/objects/Parsed_Application__c/fields/Property_Postcode__c.field-meta.xml
<CustomField>
    <fullName>Property_Postcode__c</fullName>
    <label>Property Postcode</label>
    <length>20</length>
    <type>Text</type>
</CustomField>