force-app/main/default/objects/Parsed_Application__c/fields/Property_Type__c.field-meta.xml
<CustomField>
    <fullName>Property_Type__c</fullName>
    <label>Property Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>