force-app/main/default/objects/Parsed_Application__c/fields/Scheme__c.field-meta.xml
<CustomField>
    <fullName>Scheme__c</fullName>
    <label>Scheme</label>
    <length>100</length>
    <type>Text</type>
</CustomField>