force-app/main/default/objects/Parsed_Application__c/fields/Vendor_1_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Vendor_1_First_Name__c</fullName>
    <label>Vendor 1 First Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>