force-app/main/default/objects/Parsed_Application__c/fields/Vendor_1_Mobile__c.field-meta.xml
<CustomField>
    <fullName>Vendor_1_Mobile__c</fullName>
    <label>Vendor 1 Mobile</label>
    <length>40</length>
    <type>Text</type>
</CustomField>