force-app/main/default/objects/Parsed_Application__c/fields/Vendor_2_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Vendor_2_Last_Name__c</fullName>
    <label>Vendor 2 Last Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>