force-app/main/default/objects/Parsed_Application__c/fields/Vendor_2_Mobile__c.field-meta.xml
<CustomField>
    <fullName>Vendor_2_Mobile__c</fullName>
    <label>Vendor 2 Mobile</label>
    <length>40</length>
    <type>Text</type>
</CustomField>